--- a/CarManagementAPI/appsettings.Development.json
+++ b/CarManagementAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Cloudinary": {
+    "CLOUD_NAME": "dukeeeaan",
+    "API_KEY": "547988388363196",
+    "API_SECRET": "Z1algbKY81w_gEyM2ObhGwlBpLI"
   }
 }
