--- a/CarManagementAPI/appsettings.json
+++ b/CarManagementAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CLOUD_NAME": "dukeeeaan",
+    "API_KEY": "547988388363196",
+    "API_SECRET": "Z1algbKY81w_gEyM2ObhGwlBpLI"
+  }
 }
