--- a/CarManagementAPI/appsettings.Development.json
+++ b/CarManagementAPI/appsettings.Development.json
@@ -9,5 +9,14 @@
     "CLOUD_NAME": "dukeeeaan",
     "API_KEY": "547988388363196",
     "API_SECRET": "Z1algbKY81w_gEyM2ObhGwlBpLI"
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=CarManagementDb;Username=postgres;Password=1234;"
+  },
+  "EMAIL_CONFIGURATION": {
+  "HOST": "smtp.gmail.com",
+  "PORT": 587,
+  "USERNAME": "ax.desk01@gmail.com",
+  "PASS": "oauulhmncxnlhbkg"
+}
 }
